v5.6
-----
+ Added ability to add a custom amount to your Steam wallet
+ Added sort option to badge page to sort by number of card drops remaining

v5.5
-----
+ Added "Early Access" image banners to Early Access games on Steam
+ Added a list of friends that own a game on the "friends that own" page
+ Added badge progress and remaining card drops to app pages
: Fixed bug where badge filter wasn't working with some languages
: Fixed bug in wishlist sorting that would cause it to fail if a game had no price displayed
: Fixed bug that caused wishlist not to highlight under certain circumstances

v5.4
-----
+ Added option to hide DLC for games you do not own
+ Added option to add button on app pages to test your system requirements in Steam (experimental!)
+ Sorting wishlist by discount now additionally subsorts by price (lowest -> highest)
: Fixed inventory market price check displaying "Sold!" when looking up prices
: Fixed bug where inventory market price check wasn't displaying for some users
: Fixed bug where Holiday Snow Globes weren't highlighting in the marketplace
: Fixed bug where DRM warnings weren't displaying under certain conditions
: Fixed bug where holiday snowglobe background was displaying in Library mode

v5.3.3
-----
+ Added highlighting to Community Choice games on homepage
: Fixed a bug with market links on Snow Globe badge progress page

v5.3.2
-----
: Fixed a bug that caused homepage lists not to highlight when scrolled

v5.3.1
-----
+ Added highlighting to homepage of Winter Sale
: Fixed some localization strings in the options page
: Fixed a bug where the changelog would be displayed twice when resetting options

v5.3
-----
+ Added regional pricing indicators to sale pages and the daily deal
+ Added profile link to AStats.nl
+ Added option to hide globe icon in regional pricing
+ Added an option to hide trademark symbols in game titles
: Completely rewrote function to get inventory market prices (thanks Sharkiller!)